--- a/src/style.css
+++ b/src/style.css
@@ -174,7 +174,8 @@
 .hmusic>.longarr>li {
 	white-space:nowrap;
 	padding:3px 0 3px 20px;
-	cursor:pointer
+	cursor:pointer;
+	color: #434343;
 }
 .hmusic>.longarr>li:hover {
 	padding:3px 0 3px 24px;
