--- a/src/style.css
+++ b/src/style.css
@@ -208,3 +208,22 @@
 	padding:3px 0 3px 24px;
 	background-color:hsla(0,0%,69%,.9)
 }
+/*滚动条*/
+.longarr::-webkit-scrollbar-track
+{
+    border-radius: 10px;
+    background-color: rgba(19, 19, 19, 0.04);
+}
+
+.longarr::-webkit-scrollbar
+{
+    width: 6px;
+    background-color: #F5F5F5;
+}
+
+.longarr::-webkit-scrollbar-thumb
+{
+	  border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(245, 50, 50, 0.67);
+}
